syntax = "proto3";
package sacloud;
option go_package = "github.com/sacloud/libsacloud/v2/grpc/sacloud";

import "github.com/sacloud/libsacloud/v2/grpc/sacloud/types/types.proto";
import "google/protobuf/timestamp.proto";

message FindCondition {
  int64 count = 1;
  int64 from = 2;
  repeated string sort = 3;
  map<string, string> filter = 4;
  repeated string include = 5;
  repeated string exclude = 6;
}

message FTPServer {
  string hostName = 1;
  string ipAddress = 2;
  string user = 3;
  string password = 4;
}

message FTPServerInfo {
  string hostName = 1;
  string ipAddress = 2;
}

message OpenFTPRequest { bool changePassword = 1; }
